[project]
name = "llm-identify-document"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
]
